Project image size fix on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -216,7 +216,7 @@ article time {
     #content {
         padding-top: 0;
     }
-    .projects #content img {
+    .projects #content .intro img {
         height: 100px;
         width: 100px;
     }
